FIX: footer copy spacing

--- a/Magento_Backend/web/css/source/extend/pages/_login.less
+++ b/Magento_Backend/web/css/source/extend/pages/_login.less
@@ -55,7 +55,7 @@
         .page-wrapper {
             padding: 8rem;
         }
-    }   
+    }
 }
 
 //
@@ -84,7 +84,8 @@
 .login-footer {
     font-size: @font-size__s;
     color: @neutral-50;
-    margin: 8.5rem 0 0 0;
+    margin: 6.5rem 0 0;
+    padding-block: 2rem;
 
     .link-copyright {
         width: 100%;
